--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,9 +1,9 @@
 schema_version = "1.0.0"
 
 id = "Modifier_List_Fork"
-version = "1.8.75"
-name = "Modifier List [Fork]"
-tagline = "Add-on to Enhanced UI layout for modifiers with handy features"
+version = "1.9.75"
+name = "Modifier List"
+tagline = "Enhanced Modifier UI/Features, now with Edit Mesh Modifier"
 maintainer = "Antti Tikka, Draise, Dan-Gry"
 type = "add-on"
 
